# keyboard-locker

./: .gitignore  DESIGN.html  DESIGN.md  README.md  index.html  package-lock.json  package-portable.ps1  package-portable.sh  package.json  vite.config.ts
.marscode/: deviceInfo.json
scripts/: generate-tray-icon.py
src/: App.vue  style.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: config.rs  device.rs  keyboard.rs  lifecycle.rs  mod.rs
src-tauri/src/config/: mod.rs  store.rs
src-tauri/src/locker/: combo.rs  device_manager.rs  engine.rs  filter.rs  mod.rs  raw_grab.rs  rules.rs  shortcut.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/tray/: builder.rs  mod.rs
src-tauri/test/: Cargo.toml  test_linux.rs  test_windows.rs  test_windows_keyboard.rs  test_windows_win_key.rs
src-tauri/tests/: common.rs  windows_integration_test.rs  windows_keyboard_test.rs  windows_win_key_test.rs
src/components/: ComboRecorder.vue  DeviceManager.vue  EngineToggle.vue  KeyButton.vue  KeyboardMapper.vue  ModeToggle.vue  PermissionBanner.vue  StatusBar.vue  TitleBar.vue  TopAppBar.vue
src/composables/: useKeyboardState.ts
src/types/: index.ts
src/utils/: keyLabels.ts
