[package]
name = "test-keyboard-lock"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test_keyboard_lock"
path = "test_windows.rs"

[dependencies]
parking_lot = "0.12"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Foundation",
] }