[package]
name = "test-keyboard-lock"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test_keyboard_lock"
path = "test_windows.rs"

[[bin]]
name = "test_windows_win_key"
path = "test_windows_win_key.rs"

[[bin]]
name = "test_linux"
path = "test_linux.rs"

[dependencies]
parking_lot = "0.12"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Foundation",
] }

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"